# devclean

./: Cargo.toml  LICENSE  README.md
src/: main.rs  util.rs
src/cleaner/: mod.rs
src/config/: mod.rs
src/scanner/: mod.rs  project.rs  walk.rs
src/tui/: colors.rs  display.rs  mod.rs
tests/: age_parser_test.rs  cleaner_test.rs  config_test.rs  display_test.rs  edge_cases_test.rs  scanner_analysis_test.rs  scanner_detection_test.rs  selection_parser_test.rs
