[package]
name = "dev-sweep"
version = "0.1.5"
edition = "2024"
rust-version = "1.85"
authors = ["Mark Waid Jr"]
description = "A fast, interactive CLI tool to find and clean build artifacts and dependency caches across all your dev projects"
readme = "README.md"
license = "MIT"
repository = "https://github.com/FroogalTheDragon/dev-sweep"
homepage = "https://github.com/FroogalTheDragon/dev-sweep"
keywords = ["cli", "cleanup", "disk-space", "developer-tools", "build-artifacts"]
categories = ["command-line-utilities", "development-tools", "filesystem"]

[[bin]]
name = "dev-sweep"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
walkdir = "2"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
